<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    android:layout_marginBottom="20sp" >
    <TextView
        android:id="@+id/taskName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_task"
        android:textSize="20sp"/>
    <Chronometer 
        android:id="@+id/task_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_time"
            android:text="@string/button_start"
            />
        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/start_button"
            android:text="@string/button_pause" />
        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pause_button"
            android:text="@string/button_restart"/>
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/restart_button"
            android:text="@string/button_delete"/>
     </RelativeLayout>
</LinearLayout>